<resources>
    <string name="app_name">Money Conversion Pro</string>
    <string name="signin_username_or_email_hint">Username or Email</string>
    <string name="signin_password_hint">Password</string>
    <string name="signin_user_btn_text">LOG IN</string>
    <string name="signin_or_text">OR</string>
    <string name="signin_actionbar_title">Login to your app</string>
    <string name="singin_login_with_facebook">login with facebook</string>
    <string name="singin_login_with_twitter">login with twitter</string>
    <string name="singin_login_with_google">login with google</string>
    <string name="signin_menu_item">Menu Item</string>

    <string name="currency_conversion_title">Conversão de moeda</string>
    <string name="currency_conversion_menu_history">Histórico</string>
    <string name="currency_conversion_money_type">tipo moeda</string>
    <string name="currency_conversion_input_hint_format">valor %s</string>
    <string name="currency_conversion_input_hint">valor</string>
    <string name="currency_conversion_desired_money">moeda desejada</string>
    <string name="currency_conversion_new_value_hint">Novo Valor</string>
    <string name="currency_conversion_btn_convert">converter</string>
    <string name="currency_conversion_error">Ocorreu um erro ao converter as moedas!</string>


    <string name="history_title">Histórico</string>
    <string name="history_menu_search">Procurar</string>

    <string-array name="supported_currencies">
        <item>BRL</item>
        <item>CAD</item>
        <item>HKD</item>
        <item>ISK</item>
        <item>PHP</item>
        <item>DKK</item>
        <item>HUF</item>
        <item>CZK</item>
        <item>GBP</item>
        <item>RON</item>
        <item>SEK</item>
        <item>IDR</item>
        <item>INR</item>
        <item>BRL</item>
        <item>RUB</item>
        <item>HRK</item>
        <item>JPY</item>
        <item>THB</item>
        <item>HKD</item>
        <item>ISK</item>
        <item>PHP</item>
        <item>DKK</item>
        <item>HUF</item>
        <item>CZK</item>
        <item>GBP</item>
        <item>RON</item>
        <item>SEK</item>
        <item>IDR</item>
        <item>INR</item>
        <item>RUB</item>
        <item>HRK</item>
        <item>JPY</item>
        <item>THB</item>
        <item>CHF</item>
        <item>EUR</item>
        <item>MYR</item>
        <item>BGN</item>
        <item>TRY</item>
        <item>CNY</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>ZAR</item>
        <item>USD</item>
        <item>MXN</item>
        <item>SGD</item>
        <item>AUD</item>
        <item>ILS</item>
        <item>KRW</item>
        <item>PLN</item>
        <item>CHF</item>
        <item>EUR</item>
        <item>MYR</item>
        <item>BGN</item>
        <item>TRY</item>
        <item>CNY</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>ZAR</item>
        <item>USD</item>
        <item>MXN</item>
        <item>SGD</item>
        <item>AUD</item>
        <item>ILS</item>
        <item>KRW</item>
        <item>PLN</item>
    </string-array>
</resources>
