<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CurrencyConversionActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <Spinner
            android:id="@+id/spCurrencyOrigin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:entries="@array/supported_currencies"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvLabelMoneyType"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelMoneyType" />

        <TextView
            android:id="@+id/tvLabelMoneyType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="54dp"
            android:lineSpacingMultiplier="0.44"
            android:text="@string/currency_conversion_money_type"
            android:textAllCaps="true"
            android:textColor="#FF8492A6"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <EditText
            android:id="@+id/etCurrencyOrigin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/currency_conversion_input_hint"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/spCurrencyOrigin"
            app:layout_constraintStart_toStartOf="@+id/spCurrencyOrigin"
            app:layout_constraintTop_toBottomOf="@+id/spCurrencyOrigin" />

        <TextView
            android:id="@+id/tvLabelDesiredMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:lineSpacingMultiplier="0.44"
            android:text="@string/currency_conversion_desired_money"
            android:textAllCaps="true"
            android:textColor="#FF8492A6"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCurrencyOrigin" />

        <Spinner
            android:id="@+id/spCurrencyDestination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:entries="@array/supported_currencies"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvLabelMoneyType"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelDesiredMoney" />

        <EditText
            android:id="@+id/etCurrencyDestination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/currency_conversion_new_value_hint"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/spCurrencyOrigin"
            app:layout_constraintStart_toStartOf="@+id/spCurrencyOrigin"
            app:layout_constraintTop_toBottomOf="@+id/spCurrencyDestination" />

        <Button
            android:id="@+id/btnConvert"
            android:layout_width="228dp"
            android:layout_height="93dp"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorPrimary"
            android:lineSpacingMultiplier="0.38"
            android:text="@string/currency_conversion_btn_convert"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="@+id/barrier2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCurrencyDestination" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/btnConvert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnConvert" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>